# TAU-Hand-Control

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/apriltag_ros/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/gripper_state_publisher/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/hand_control/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/openhand_node/: .catkin  .rosinstall  local_setup.sh
devel/.private/rollout/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/apriltag_ros/: AnalyzeSingleImage.h  AnalyzeSingleImageRequest.h  AnalyzeSingleImageResponse.h  AprilTagDetection.h  AprilTagDetectionArray.h
devel/include/hand_control/: IsDropped.h  IsDroppedRequest.h  IsDroppedResponse.h  ObjOrientation.h  ObjOrientationRequest.h  ObjOrientationResponse.h  (+23 more)
logs/apriltag/: build.cmake.000.log.stderr
logs/gripper_state_publisher/: build.cmake.000.log.stderr
src/: scaler.pkl
src/gripper_state_publisher/: CMakeLists.txt  package.xml
src/gripper_state_publisher/include/gripper_state_publisher/: gripper_state_publisher.hpp
src/gripper_state_publisher/src/: gripper_state_publisher.cpp  node.cpp
src/hand_control/: CMakeLists.txt  README.md  package.xml
src/openhand_node/: CMakeLists.txt
src/rollout/: CMakeLists.txt  README.md
(+2383 files in other folders)
